--- a/package.json
+++ b/package.json
@@ -25,6 +25,16 @@
         "compression": "^1.7.0",
         "cookie-session": "^2.0.0-alpha.2",
         "csurf": "^1.9.0",
+        "d3": "^5.12.0",
+        "d3-array": "^2.4.0",
+        "d3-axis": "^1.0.12",
+        "d3-brush": "^1.1.3",
+        "d3-geo": "^1.11.7",
+        "d3-scale": "^3.2.0",
+        "d3-selection": "^1.4.0",
+        "d3-shape": "^1.3.5",
+        "d3-svg-legend": "^2.25.6",
+        "d3-transition": "^1.2.0",
         "eslint": "^4.19.1",
         "eslint-plugin-react": "^7.12.4",
         "express": "^4.14.0",
