--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "axios": "^0.19.0",
         "babel-loader": "^8.0.5",
         "bcryptjs": "^2.4.3",
+        "chart.js": "^2.9.2",
         "compression": "^1.7.0",
         "cookie-session": "^2.0.0-alpha.2",
         "csurf": "^1.9.0",
@@ -42,6 +43,7 @@
         "jest": "^24.7.1",
         "multer": "^1.3.0",
         "react": "^16.9.0-alpha.0",
+        "react-chartjs-2": "^2.8.0",
         "react-dom": "^16.9.0-alpha.0",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
